--- a/fontscale.sty
+++ b/fontscale.sty
@@ -10,18 +10,18 @@
 \NeedsTeXFormat{LaTeX2e}[2023-11-01]
 \ProvidesExplPackage
   {fontscale}
-  {2025-02-06}
-  {3.1.1}
+  {2025-02-13}
+  {3.1.2}
   {A flexible interface for setting font sizes}
 
-% l3kernel version 2023-10-10 added many 'e'-variants.
-\IfExplAtLeastTF { 2023-10-10 } { }
+% l3kernel version 2023-11-09 added documentation for \c_nan_fp.
+\IfExplAtLeastTF { 2023-11-09 } { }
   {
     \msg_new:nnn { fontscale } { l3kernel-out-of-date }
       {
-        The~ fontscale~ package~ could~ not~ load.~
+        The~ fontscale~ package~ could~ not~ load. \\
         This~ package~ requires~
-        L3~ programming~ layer~ version~ 2023-10-10~ or~ newer.
+        L3~ programming~ layer~ version~ 2023-11-09~ or~ newer.
       }
     \msg_critical:nn { fontscale } { l3kernel-out-of-date }
   }
@@ -31,32 +31,28 @@
 \msg_new:nnn { fontscale } { key-musical-base-out-of-bounds }
   {
     Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ 'musical / base'~
-    must~ be~ a~ positive~ length.
+    The~ value~ of~ the~ key~ 'musical / base'~ must~ be~ a~ positive~ length.
   }
 \msg_new:nnn { fontscale } { key-musical-ratio-out-of-bounds }
   {
     Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ 'musical / ratio'~
-    must~ be~ greater~ than~ 1.
+    The~ value~ of~ the~ key~ 'musical / ratio'~ must~ be~ greater~ than~ 1.
   }
 \msg_new:nnn { fontscale } { key-musical-notes-out-of-bounds }
   {
     Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ 'musical / notes'~
-    must~ be~ a~ positive~ integer.
+    The~ value~ of~ the~ key~ 'musical / notes'~ must~ be~ a~ positive~
+    integer.
   }
 \msg_new:nnn { fontscale } { key-font-scale-out-of-bounds }
   {
-    Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ '#2 / scale'~
-    must~ be~ positive.
+    Invalid~ value~ '#2'~ \msg_line_context:. \\
+    The~ value~ of~ the~ key~ '#1 / scale'~ must~ be~ positive.
   }
 \msg_new:nnn { fontscale } { key-font-size-out-of-bounds }
   {
-    Invalid~ value~ '#1'~ \msg_line_context:. \\
-    The~ value~ of~ the~ key~ '#2 / size'~
-    must~ be~ a~ positive~ length.
+    Invalid~ value~ '#2'~ \msg_line_context:. \\
+    The~ value~ of~ the~ key~ '#1 / size'~ must~ be~ a~ positive~ length.
   }
 \msg_new:nnn { fontscale } { key-font-scale-overwritten }
   {
@@ -192,8 +188,6 @@
 % the font size equals that of \normalsize is optimized further because it is
 % by far the most common case. \f@size and \f@baselineskip are not used
 % elsewhere in the code.
-\hook_gput_code:nnn { selectfont } { fontscale }
-  { \__fontscale_hook_code_selectfont: }
 \cs_new_protected:Npn \__fontscale_hook_code_selectfont:
   {
     \dim_set:Nn \l_fontscale_size_dim { \f@size pt }
@@ -284,6 +278,8 @@
       }
       { \fp_set_eq:NN \l_fontscale_step_fp \c_nan_fp }
   }
+\hook_gput_code:nnn { selectfont } { fontscale }
+  { \__fontscale_hook_code_selectfont: }
 
 % Used only to speed up floating point calculations.
 \fp_new:N \l__fontscale_normalsize_size_fp
@@ -302,7 +298,7 @@
 %%> \section{Some functions}
 
 % Variants of l3kernel functions
-\cs_generate_variant:Nn \msg_error:nnnn { nnv , nne }
+\cs_generate_variant:Nn \msg_error:nnnn { nnnv }
 % Sets a dimen/skip variable from a dimen/skip expression, appending a default
 % unit 'pt', and removes extra trailing tokens, if any.
 \cs_new_protected:Npn \__fontscale_dim_set_default_pt:Nn #1#2
@@ -704,8 +700,8 @@
           { \l__fontscale_normalsize_size_tl }
         \dim_compare:nNnF \l_fontscale_normalsize_size_dim > \c_zero_dim
           {
-            \msg_error:nnVn { fontscale } { key-font-size-out-of-bounds }
-              \l_fontscale_normalsize_size_dim { normalsize }
+            \msg_error:nnnV { fontscale } { key-font-size-out-of-bounds }
+              { normalsize } \l_fontscale_normalsize_size_dim
             \prg_break:
           }
       }
@@ -842,8 +838,8 @@
           {
             \tl_map_break:n
               {
-                \msg_error:nnen { fontscale } { key-font-scale-out-of-bounds }
-                  { \fp_eval:n { \use:c { l__fontscale_#1_scale_tl } } } {#1}
+                \msg_error:nnne { fontscale } { key-font-scale-out-of-bounds }
+                  {#1} { \fp_eval:n { \use:c { l__fontscale_#1_scale_tl } } }
                 \prg_break:
               }
           }
@@ -857,8 +853,8 @@
           {
             \tl_map_break:n
               {
-                \msg_error:nnvn { fontscale } { key-font-size-out-of-bounds }
-                  { l_fontscale_#1_size_dim } {#1}
+                \msg_error:nnnv { fontscale } { key-font-size-out-of-bounds }
+                  {#1} { l_fontscale_#1_size_dim }
                 \prg_break:
               }
           }
